--- a/locales/source/en-DK/components/filterNames.json
+++ b/locales/source/en-DK/components/filterNames.json
@@ -25,6 +25,7 @@
     "hasGeospatialIssue": "Has geospatial issue",
     "basisOfRecord": "Basis of record",
     "issue": "Issues",
+    "isExtinct": "Is extinct",
     "locality": "Locality",
     "lastInterpreted": "Last interpreted",
     "waterBody": "Water body",
