make the old validator available for CSV files

--- a/locales/source/en-DK/components/validation.json
+++ b/locales/source/en-DK/components/validation.json
@@ -172,7 +172,8 @@
       }
     },
     "validatingFile": "validating",
-    "fileName": "File name"
+    "fileName": "File name",
+    "needCSVvalidationUseOldValidator" : "Need CSV validation? The legacy validator is available"
 
   }
 
