--- a/locales/source/en-DK/components/validation.json
+++ b/locales/source/en-DK/components/validation.json
@@ -109,6 +109,7 @@
     "dataValidatorDescription": "The GBIF data validator is a service that allows anyone with a GBIF-relevant dataset to receive a report on the syntactical correctness and the validity of the content contained within the dataset.",
     "thisIsAnEarlyAccessVersion": "This an early access version. Please report issues and feedback",
     "here": "Here.",
+    "hereLegacy": "here.",
     "coreRowType": "Core row type",
     "submit": "Submit",
     "dropHere": "Drop here",
